--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>io.quarkiverse.web-bundler</groupId>
             <artifactId>quarkus-web-bundler</artifactId>
-            <version>999-SNAPSHOT</version>
+            <version>1.5.0.CR4</version>
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.qute.web</groupId>
