--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 quarkus.statiq.fixed=/,/static/**,/assets/**,/some-page
-%test.quarkus.management.enabled=true
+quarkus.management.enabled=true
+%dev.quarkus.management.enabled=false
