--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 quarkus.statiq.fixed=/,/static/**,/assets/**,/some-page
 quarkus.management.enabled=true
 %dev.quarkus.management.enabled=false
+quarkus.management.test-port=9000
