--- a/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,9 +1,15 @@
 name: Statiq
-#description: Do something useful.
+description: Generate static websites out of your Quarkus web application.
 metadata:
-#  keywords:
-#    - statiq
+  keywords:
+    - statiq
+    - website
+    - static
+    - generate
+    - jekyll
+    - hugo
+    - web
 #  guide: https://quarkiverse.github.io/quarkiverse-docs/statiq/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
-#  categories:
-#    - "miscellaneous"
-#  status: "preview"
+  categories:
+    - "web"
+  status: "preview"
