--- a/integration-tests/src/test/resources/application.properties
+++ b/integration-tests/src/test/resources/application.properties
@@ -1,2 +1,2 @@
-quarkus.statiq.batch=true
-quarkus.log.category."io.quarkiverse.statiq".level=DEBUG
+quarkus.roq.batch=true
+quarkus.log.category."io.quarkiverse.roq".level=DEBUG
