--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -2,20 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.quarkiverse.statiq</groupId>
-        <artifactId>quarkus-statiq-parent</artifactId>
+        <groupId>io.quarkiverse.roq</groupId>
+        <artifactId>quarkus-roq-parent</artifactId>
         <version>999-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>quarkus-statiq-docs</artifactId>
-    <name>Quarkus Statiq - Documentation</name>
+    <artifactId>quarkus-roq-docs</artifactId>
+    <name>Quarkus Roq - Documentation</name>
 
     <dependencies>
         <!-- Make sure the doc is built after the other artifacts -->
         <dependency>
-            <groupId>io.quarkiverse.statiq</groupId>
-            <artifactId>quarkus-statiq-deployment</artifactId>
+            <groupId>io.quarkiverse.roq</groupId>
+            <artifactId>quarkus-roq-deployment</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
@@ -65,7 +65,7 @@
                             <resources>
                                 <resource>
                                     <directory>${project.basedir}/../target/asciidoc/generated/config/</directory>
-                                    <include>quarkus-statiq.adoc</include>
+                                    <include>quarkus-roq.adoc</include>
                                     <filtering>false</filtering>
                                 </resource>
                                 <resource>
