--- a/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,15 +1,17 @@
-name: Statiq
+name: Roq
 description: Generate static websites out of your Quarkus web application.
 metadata:
   keywords:
-    - statiq
     - website
     - static
     - generate
     - jekyll
     - hugo
+    - lume
+    - site
+    - generator
     - web
-#  guide: https://quarkiverse.github.io/quarkiverse-docs/statiq/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
+#  guide: https://quarkiverse.github.io/quarkiverse-docs/roq/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
   categories:
     - "web"
   status: "preview"
