--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <name>Quarkus Roq - Parent</name>
 
     <modules>
+        <module>common-deployment</module>
         <module>deployment</module>
         <module>runtime</module>
         <module>docs</module>
