Introduce roq-frontmatter

--- a/pom.xml
+++ b/pom.xml
@@ -74,4 +74,19 @@
         </pluginManagement>
     </build>
 
+    <profiles>
+        <profile>
+            <id>it</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>!true</value>
+                </property>
+            </activation>
+            <modules>
+                <module>integration-tests</module>
+            </modules>
+        </profile>
+    </profiles>
+
 </project>
