Introduce roq-frontmatter

--- a/roq-data/runtime/pom.xml
+++ b/roq-data/runtime/pom.xml
@@ -23,6 +23,10 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
