--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,12 @@
     <modules>
         <module>common/runtime</module>
         <module>common/deployment</module>
-        <module>roq/runtime</module>
-        <module>roq/deployment</module>
         <module>docs</module>
         <module>roq-generator</module>
         <module>roq-data</module>
+        <module>roq-frontmatter</module>
+        <module>roq/runtime</module>
+        <module>roq/deployment</module>
     </modules>
 
     <scm>
@@ -35,8 +36,9 @@
         <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <quarkus.version>3.12.0</quarkus.version>
+        <quarkus.version>3.13.2</quarkus.version>
         <assertj.version>3.26.3</assertj.version>
+        <quarkus-qute-web.version>3.1.0</quarkus-qute-web.version>
     </properties>
 
     <dependencyManagement>
