--- a/common/deployment/pom.xml
+++ b/common/deployment/pom.xml
@@ -5,6 +5,7 @@
         <groupId>io.quarkiverse.roq</groupId>
         <artifactId>quarkus-roq-parent</artifactId>
         <version>999-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>quarkus-roq-common-deployment</artifactId>
     <name>Quarkus Roq - Common - Deployment</name>
