--- a/common/runtime/pom.xml
+++ b/common/runtime/pom.xml
@@ -6,6 +6,7 @@
         <groupId>io.quarkiverse.roq</groupId>
         <artifactId>quarkus-roq-parent</artifactId>
         <version>999-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>quarkus-roq-common</artifactId>
     <name>Quarkus Roq - Common</name>
