--- a/roq-data/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-data/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -9,4 +9,7 @@ metadata:
   #  guide: https://quarkiverse.github.io/quarkiverse-docs/roq/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
   categories:
     - "web"
+  icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
+  config:
+    - "quarkus.roq.data"
   status: "preview"
