--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.version>3.12.0</quarkus.version>
+        <assertj.version>3.26.0</assertj.version>
     </properties>
 
     <dependencyManagement>
