Use Roq Jackson and with new specific mappers

--- a/common/deployment/pom.xml
+++ b/common/deployment/pom.xml
@@ -15,8 +15,8 @@
             <artifactId>quarkus-arc-deployment</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-jackson-deployment</artifactId>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
