--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -9,13 +9,13 @@ on:
 jobs:
   preview:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.event == 'pull_request' && github.event.workflow_run.conclusion == 'success'
+    if: github.event.workflow_run.event == 'pull_request'
     steps:
       - name: Download PR Artifact
         uses: dawidd6/action-download-artifact@v6
         with:
-          workflow: ${{ github.event.workflow_run.id }}
-          workflow_conclusion: success
+          workflow: ${{ github.event.workflow_run.workflow_id }}
+          workflow_conclusion: ""
           name: site
       - name: Store PR id as variable
         id: pr
