Remove support for external site dir

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -46,6 +46,15 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${basedir}/site</directory>
+                <targetPath>site</targetPath>
+            </resource>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>io.quarkus</groupId>
