--- a/roq-frontmatter/deployment/pom.xml
+++ b/roq-frontmatter/deployment/pom.xml
@@ -31,6 +31,11 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
+            <artifactId>quarkus-roq-generator-spi</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.roq</groupId>
             <artifactId>quarkus-roq-frontmatter</artifactId>
             <version>${project.version}</version>
         </dependency>
