--- a/roq-generator/deployment/pom.xml
+++ b/roq-generator/deployment/pom.xml
@@ -21,6 +21,11 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
+            <artifactId>quarkus-roq-generator-spi</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.roq</groupId>
             <artifactId>quarkus-roq-generator</artifactId>
             <version>${project.version}</version>
         </dependency>
