--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 17
-      - name: Build & Generate
+      - name: Build Roq
+        run: mvn -B clean install -DskipTests
+      - name: Build & Generate Blog
         working-directory: roq-blog
         run: QUARKUS_ROQ_GENERATOR_BATCH=true mvn -B package quarkus:run -Dquarkus.profile=gh-pages -DskipTests
       - name: Upload artifact
