Create config data for rootPath and url

--- a/roq-blog/src/main/resources/application.properties
+++ b/roq-blog/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 quarkus.web-bundler.dependencies.node-modules=node_modules
 quarkus.roq.site-dir=site
+%prod.baseurl=/quarkus-roq
+%prod.url=https://quarkiverse.io
