--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 17
+          distribution: 'temurin'
+          cache: 'maven'
       - name: Build Roq
         run: mvn -B clean install -DskipTests
       - name: Build & Generate Blog
