--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -32,7 +32,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: https://pages.quarkiverse.io/quarkus-roq/
     runs-on: ubuntu-latest
     needs: build
     permissions:
