--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -21,11 +21,9 @@ jobs:
           java-version: 17
           distribution: 'temurin'
           cache: 'maven'
-      - name: Build Roq
-        run: mvn -B clean install -DskipTests
       - name: Build & Generate Blog
         working-directory: blog
-        run: QUARKUS_ROQ_GENERATOR_BATCH=true mvn -B package quarkus:run -Dquarkus.profile=gh-pages -DskipTests
+        run: QUARKUS_ROQ_GENERATOR_BATCH=true mvn -B package quarkus:run -Dquarkus.profile=gh-pages -DskipTests -Dstandalone
       - name: Upload site as artifact
         uses: actions/upload-artifact@v4
         with:
