--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
     <modules>
         <module>common/runtime</module>
         <module>common/deployment</module>
-        <module>docs</module>
         <module>roq-generator</module>
         <module>roq-data</module>
         <module>roq-frontmatter</module>
@@ -75,6 +74,18 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>docs</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>!true</value>
+                </property>
+            </activation>
+            <modules>
+                <module>docs</module>
+            </modules>
+        </profile>
         <profile>
             <id>it</id>
             <activation>
