--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 quarkus.web-bundler.dependencies.node-modules=node_modules
 quarkus.roq.site-dir=site
-%gh-pages.url=https://quarkiverse.io
+%gh-pages.roq.url=https://pages.quarkiverse.io/
 %gh-pages.quarkus.http.root-path=/quarkus-roq/
