--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -49,6 +49,12 @@
             <version>1.7.1</version>
         </dependency>
         <dependency>
+            <groupId>org.mvnpm</groupId>
+            <artifactId>highlight.js</artifactId>
+            <version>11.10.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc</artifactId>
         </dependency>
