--- a/roq-frontmatter/deployment/pom.xml
+++ b/roq-frontmatter/deployment/pom.xml
@@ -52,14 +52,17 @@
             <artifactId>vertx-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.quarkiverse.qute.web</groupId>
-            <artifactId>quarkus-qute-web-deployment</artifactId>
-            <version>${quarkus-qute-web.version}</version>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-vertx-http-deployment</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.qute.web</groupId>
             <artifactId>quarkus-qute-web-markdown-deployment</artifactId>
             <version>${quarkus-qute-web.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-spi-deployment</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
