--- a/roq-frontmatter/deployment/src/test/resources/application.properties
+++ b/roq-frontmatter/deployment/src/test/resources/application.properties
@@ -1,2 +1,4 @@
-roq.url=https://mywebsite.com
-quarkus.http.root-path=/foo
+quarkus.http.root-path=/foo/
+
+quarkus.roq.site.url=https://mywebsite.com
+quarkus.roq.site.root-path=/bar/
