--- a/roq-frontmatter/runtime/pom.xml
+++ b/roq-frontmatter/runtime/pom.xml
@@ -38,9 +38,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.quarkiverse.qute.web</groupId>
-            <artifactId>quarkus-qute-web</artifactId>
-            <version>${quarkus-qute-web.version}</version>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-vertx-http</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.qute.web</groupId>
