--- a/roq-generator/integration-tests/pom.xml
+++ b/roq-generator/integration-tests/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>io.quarkiverse.qute.web</groupId>
             <artifactId>quarkus-qute-web</artifactId>
-            <version>3.1.0</version>
+            <version>${quarkus-qute-web.version}</version>
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
