--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.web-bundler.dependencies.node-modules=node_modules
 %gh-pages.quarkus.roq.site.url=https://pages.quarkiverse.io/
-%gh-pages.quarkus.roq.site.root-path=/quarkus-roq/
+%gh-pages.quarkus.http.root-path=/quarkus-roq/
 quarkus.web-bundler.dependencies.auto-import=all
+quarkus.roq.generator.paths=/,/static/**
