--- a/blog/site/_data/info.yml
+++ b/blog/site/_data/info.yml
@@ -1,7 +1,7 @@
-name: ROQ # add your name
-img: iamroq.png # add your photo
-about: All the tools to generate static websites out of your Quarkus web application. # add description
-social-twitter: quarkusio # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: quarkiverse/quarkus-roq # add your Github handle
-social-linkedin: quarkusio # add your Linkedin handle
+name: I am ROQ
+img: iamroq.png
+about: I provide you with all the tools to generate static websites out of your Quarkus web application.
+social-twitter: quarkusio
+social-facebook:
+social-github: quarkiverse/quarkus-roq
+social-linkedin: quarkusio
