--- a/roq-data/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-data/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,5 +1,5 @@
 name: Roq Data
-description: Allow to consume json and yaml data files as CDI beans
+description: Allow consumption of JSON and YAML data files as CDI beans
 metadata:
   keywords:
     - json
@@ -11,5 +11,5 @@ metadata:
     - "web"
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   config:
-    - "quarkus.roq.data"
+    - "quarkus.roq"
   status: "preview"
