--- a/roq-frontmatter/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-frontmatter/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,5 +1,5 @@
 name: Roq FrontMatter
-description: Allow to provide site content
+description: FrontMatter support to add YAML metadata to site content
 metadata:
   keywords:
     - markdown
@@ -9,6 +9,9 @@ metadata:
     - content
     - qute
   #  guide: https://quarkiverse.github.io/quarkiverse-docs/roq/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
+  icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
+  config:
+    - "quarkus.roq"
   categories:
     - "web"
   status: "preview"
