--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <quarkus.version>3.15.0</quarkus.version>
         <assertj.version>3.26.3</assertj.version>
         <quarkus-qute-web.version>3.1.0</quarkus-qute-web.version>
+        <quarkus-web-bundler.version>1.7.1</quarkus-web-bundler.version>
     </properties>
 
     <dependencyManagement>
