--- a/roq/runtime/pom.xml
+++ b/roq/runtime/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>quarkus-roq-frontmatter</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.web-bundler</groupId>
+            <artifactId>quarkus-web-bundler</artifactId>
+            <version>${quarkus-web-bundler.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
