--- a/roq-generator/integration-tests/src/main/resources/application.properties
+++ b/roq-generator/integration-tests/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-quarkus.roq.generator.paths=/,/static/**,/assets/**,/some-page
+quarkus.roq.generator.paths=/,/static/**,/assets/**,/some-page,/roq?name=foo2
+quarkus.roq.generator.custom-paths."/roq?name"=/foo.json
