--- a/roq-data/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-data/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -6,7 +6,7 @@ metadata:
     - yaml
     - data
     - static
-  #  guide: https://quarkiverse.github.io/quarkiverse-docs/roq/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
+  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-data.html
   categories:
     - "web"
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
