--- a/roq-frontmatter/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-frontmatter/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,5 +1,5 @@
 name: Roq FrontMatter
-description: FrontMatter support to add YAML metadata to site content
+description: Create a website from your Markdown/Asciidoc/Html pages using FrontMatter headers (url, layout, seo, data).
 metadata:
   keywords:
     - markdown
@@ -8,7 +8,7 @@ metadata:
     - site
     - content
     - qute
-  #  guide: https://quarkiverse.github.io/quarkiverse-docs/roq/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
+  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-frontmatter.html
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   config:
     - "quarkus.roq"
