--- a/roq-generator/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-generator/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -11,7 +11,7 @@ metadata:
     - site
     - generator
     - web
-#  guide: https://quarkiverse.github.io/quarkiverse-docs/roq/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
+  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-generator.html
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
     - "web"
