--- a/roq/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,5 +1,5 @@
 name: Roq
-description: Generate static websites out of your Quarkus web application.
+description: Static Site Generator with Quarkus super-powers.
 metadata:
   keywords:
     - website
@@ -7,11 +7,12 @@ metadata:
     - generate
     - jekyll
     - hugo
+    - ssg
     - lume
     - site
     - generator
     - web
-#  guide: https://quarkiverse.github.io/quarkiverse-docs/roq/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
+  guide: https://quarkiverse.github.io/quarkiverse-docs/roq/dev/
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
     - "web"
