Proof of concept

--- a/common/deployment/pom.xml
+++ b/common/deployment/pom.xml
@@ -28,6 +28,10 @@
             <artifactId>quarkus-junit5-internal</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-vertx-http-deployment</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
