--- a/blog/site/_data/menu.yml
+++ b/blog/site/_data/menu.yml
@@ -1,14 +1,14 @@
 items:
   - title: "Blog"
-    url: "/"
+    path: "/"
     icon: "fa fa-newspaper-o"
   - title: "Documentation"
-    url: "https://docs.quarkiverse.io/quarkus-roq/dev/index.html"
+    path: "https://docs.quarkiverse.io/quarkus-roq/dev/index.html"
     icon: "fa fa-book"
     target: "_blank"
   - title: "Events"
-    url: "events"
+    path: "/events"
     icon: "fa fa-calendar"
   - title: "About"
-    url: "about"
+    path: "/about"
     icon: "fa fa-thumbs-up"
