--- a/roq/deployment/pom.xml
+++ b/roq/deployment/pom.xml
@@ -28,6 +28,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.quarkiverse.qute.web</groupId>
+            <artifactId>quarkus-qute-web-markdown-deployment</artifactId>
+            <version>${quarkus-qute-web.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.quarkiverse.web-bundler</groupId>
             <artifactId>quarkus-web-bundler-deployment</artifactId>
             <version>${quarkus-web-bundler.version}</version>
