--- a/roq/runtime/pom.xml
+++ b/roq/runtime/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>quarkus-web-bundler</artifactId>
             <version>${quarkus-web-bundler.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.qute.web</groupId>
+            <artifactId>quarkus-qute-web-markdown</artifactId>
+            <version>${quarkus-qute-web.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
